chore: set up path to migration lib

--- a/execution/crates/migration/Cargo.toml
+++ b/execution/crates/migration/Cargo.toml
@@ -3,6 +3,10 @@ name = "sindri-script"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "migration"
+path = "src/lib.rs"
+
 [dependencies]
 base64 = "0.22.1"
 dotenvy = "0.15.7"
