--- a/execution/crates/migration/guest/Cargo.toml
+++ b/execution/crates/migration/guest/Cargo.toml
@@ -13,5 +13,6 @@ guest = []
 [dependencies]
 jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev="55c577f5a859eee843fd88d1d14bd2127b3ddd1d", features = ["guest-std"] }
 serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
 sha3 = { version = "0.10.8"}
 verifier = { path = "../../../crates/verifier" }
