--- a/execution/Cargo.toml
+++ b/execution/Cargo.toml
@@ -15,8 +15,12 @@ chrono = "0.4"
 verifier = { path = "crates/verifier" }
 
 [dependencies]
-migration = { path = "crates/migration" }
+# migration = { path = "crates/migration" }
 verifier = { path = "crates/verifier" }
 axum = "0.7.9"
 eyre="0.6.2"
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0"
+chrono = "0.4"
+thiserror = "2.0.9"
 tokio = { version = "1.37.0", features = ["full"] }
