fix: set tlsn-core in guest cargo file

--- a/execution/crates/migration/guest/Cargo.toml
+++ b/execution/crates/migration/guest/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 sha3 = { version = "0.10.8"}
 verifier = { git = "https://github.com/0xZeroLabs/the-forge", package = "verifier", branch = "main" }
+tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.5", package = "tlsn-core" }
 bytemuck = "1.12"
 getrandom = {version = "0.2", features = ["custom"] }
 rand = "0.8"
