--- a/.github/workflows/publish-execution.yml
+++ b/.github/workflows/publish-execution.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: build and push the image
+      - working-directory: ./execution/
         run: |
           docker login --username hey-ewan --password ${{ secrets.GH_PAT }} ghcr.io
           docker build . --tag ghcr.io/0xzeroorg/the-forge:latest
