fix: pointed to the fixture dir

--- a/execution/dockerfile
+++ b/execution/dockerfile
@@ -9,7 +9,7 @@ COPY Cargo.toml ./
 
 # Copy the source files and fixtures
 COPY src ./src
-COPY fixtures ./fixtures
+COPY fixture ./fixture
 COPY crates ./crates
 
 # Build the application in release mode
