fix: properly named docker image

--- a/.github/workflows/publish-execution.yml
+++ b/.github/workflows/publish-execution.yml
@@ -18,5 +18,5 @@ jobs:
         working-directory: ./execution
         run: |
           docker login --username hey-ewan --password ${{ secrets.GH_PAT }} ghcr.io
-          docker build . --tag ghcr.io/0xzeroorg/the-forge:latest
-          docker push ghcr.io/0xzeroorg/the-forge:latest
+          docker build . --tag ghcr.io/0xzeroorg/the-forge/execution:latest
+          docker push ghcr.io/0xzeroorg/the-forge/execution:latest
