--- a/.github/workflows/publish-execution.yml
+++ b/.github/workflows/publish-execution.yml
@@ -16,5 +16,7 @@ jobs:
         working-directory: ./execution
         run: |
           docker login --username hey-ewan --password ${{ secrets.GITHUB_TOKEN }} ghcr.io
-          docker build . --tag ghcr.io/0xzerolabs/the-forge/execution:latest
+          VERSION=${{ github.event.release.tag_name }}
+          docker build . --tag ghcr.io/0xzerolabs/the-forge/execution:latest --tag ghcr.io/0xzerolabs/the-forge/execution:${VERSION}
           docker push ghcr.io/0xzerolabs/the-forge/execution:latest
+          docker push ghcr.io/0xzerolabs/the-forge/execution:${VERSION}
