--- a/.github/workflows/publish-execution.yml
+++ b/.github/workflows/publish-execution.yml
@@ -20,3 +20,6 @@ jobs:
           docker build . --tag ghcr.io/0xzerolabs/the-forge/execution:latest --tag ghcr.io/0xzerolabs/the-forge/execution:${VERSION}
           docker push ghcr.io/0xzerolabs/the-forge/execution:latest
           docker push ghcr.io/0xzerolabs/the-forge/execution:${VERSION}
+    permissions:
+      contents: read
+      packages: write
