--- a/validation/Cargo.toml
+++ b/validation/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# migration = { path = "../execution/crates/migration" }
+verification = {path = "../execution/crates/verifier"}
