--- a/execution/Cargo.toml
+++ b/execution/Cargo.toml
@@ -24,3 +24,5 @@ serde_json = "1.0"
 chrono = "0.4"
 thiserror = "2.0.9"
 tokio = { version = "1.37.0", features = ["full"] }
+tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.5", package = "tlsn-core" }
+alloy = { version = "0.9.0", features = ["full"] }
