refactor: updated deps

--- a/validation/Cargo.toml
+++ b/validation/Cargo.toml
@@ -13,8 +13,7 @@ tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha
 elliptic-curve = {version = "0.13.5", features = ["pkcs8"]}
 p256 = { version = "0.13", features = ["pem", "ecdsa"] }
 chrono = "0.4"
-verifier = { path = "crates/verifier" }
 
 [dependencies]
 migration = { path = "crates/migration" }
-verification = {path = "../execution/crates/verifier"}
+verifier = {path = "../execution/crates/verifier"}
