chore: setting up irys upload

--- a/execution/crates/irys/Cargo.toml
+++ b/execution/crates/irys/Cargo.toml
@@ -3,6 +3,15 @@ name = "irys"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "irys"
+path = "src/lib.rs"
+
+[[bin]]
+name = "irys"
+path = "src/main.rs"
+
 [dependencies]
 bundlr-sdk = { version = "0.5.0", git = "https://github.com/irys-xyz/rust-sdk", package = "bundlr-sdk" }
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
+tokio = { version = "1.0", features = ["full"] }
