--- a/validation/crates/migration/guest/Cargo.toml
+++ b/validation/crates/migration/guest/Cargo.toml
@@ -3,6 +3,8 @@ name = "program"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+
 [dependencies]
 sp1-zkvm = "3.0.0"
 serde = { version = "1.0", features = ["derive"] }
