--- a/validation/dockerfile
+++ b/validation/dockerfile
@@ -12,7 +12,7 @@ COPY src ./src
 COPY crates ./crates
 
 # Build the application in release mode
-RUN cargo build --release
+RUN apt-get install -y cmake && cargo build --release
 
 # Run the binary and expose HTTP port
 EXPOSE 2078
