--- a/.github/workflows/publish-validation.yml
+++ b/.github/workflows/publish-validation.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          fetch-depth: 0
 
       - name: build and push the image
         working-directory: ./validation
