--- a/execution/crates/pinata/Cargo.toml
+++ b/execution/crates/pinata/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 reqwest = { version = "0.11", features = ["json", "multipart"] }
 serde_json = "1.0"
 dotenvy = "0.15"
+serde = { version = "1.0", features = ["derive"] }
