--- a/validation/Cargo.toml
+++ b/validation/Cargo.toml
@@ -16,4 +16,14 @@ chrono = "0.4"
 
 [dependencies]
 migration = { path = "crates/migration" }
+axum = "0.7.9"
+eyre="0.6.2"
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0"
+chrono = "0.4"
+thiserror = "2.0.9"
+tokio = { version = "1.37.0", features = ["full"] }
+execution = { git = "https://github.com/0xZeroLabs/the-forge", package = "execution", branch = "main" }
+eigenda = { git = "https://github.com/0xZeroLabs/the-forge", package = "eigenda", branch = "main" }
 verifier = { git = "https://github.com/0xZeroLabs/the-forge", package = "verifier", branch = "main" }
+tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.5", package = "tlsn-core" }
