--- a/execution/crates/eigenda/Cargo.toml
+++ b/execution/crates/eigenda/Cargo.toml
@@ -12,6 +12,7 @@ tonic = { version = "0.7", features = ["tls", "tls-roots"] }
 prost = "0.10"
 tokio = { version = "1", features = ["full"] }
 base64 = "0.13"
+hex = "0.4"
 
 [build-dependencies]
 tonic-build = "0.7"
