--- a/execution/crates/registrar/Cargo.toml
+++ b/execution/crates/registrar/Cargo.toml
@@ -13,3 +13,5 @@ alloy = { version = "0.11", features = ["full"] }
 eyre = "0.6.12"
 tokio = "1.42.0"
 dotenvy = "0.15.7"
+mockall = "0.11.3"
+serde_json = "1.0"
