--- a/execution/crates/othentic/Cargo.toml
+++ b/execution/crates/othentic/Cargo.toml
@@ -17,3 +17,4 @@ tokio = "1.42.0"
 serde = { version = "1.0.147", features = ["derive"] }
 dotenvy = "0.15.7"
 serde_json = "1.0"
+reqwest = { version = "0.11", features = ["json"] }
