chore: validated consistency in `transctipt_proof`, `content_schema`, and the transaction via the `transaction_hash`

--- a/validation/Cargo.toml
+++ b/validation/Cargo.toml
@@ -29,3 +29,4 @@ verifier = { git = "https://github.com/0xZeroLabs/the-forge", package = "verifie
 tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.5", package = "tlsn-core" }
 registrar = { git = "https://github.com/0xZeroLabs/the-forge", package = "registrar", branch = "main" }
 alloy-primitives = "0.8"
+reqwest = { version = "0.11", features = ["json"] }
