refactor: `CONTRACT_ADDRESS` > `PROXY_ADDRESS`

--- a/execution/.env.example
+++ b/execution/.env.example
@@ -2,6 +2,6 @@ PRIVATE_KEY=
 EIGENDA_ENDPOINT=https://disperser-holesky.eigenda.xyz:443
 ETH_RPC_URL=
 STORY_RPC_URL=https://aeneid.storyrpc.io
-CONTRACT_ADDRESS=
+PROXY_ADDRESS=
 PINATA_API_KEY=
 PINATA_API_SECRET=
