--- a/execution/.env.example
+++ b/execution/.env.example
@@ -1,6 +1,6 @@
 PRIVATE_KEY=
 EIGENDA_ENDPOINT=https://disperser-holesky.eigenda.xyz:443
-ETH_RPC_URL=
+OTHENTIC_RPC_URL=https://forge-aggregator.0xzero.org
 STORY_RPC_URL=https://aeneid.storyrpc.io
 PROXY_ADDRESS=
 PINATA_API_KEY=
