--- a/execution/Cargo.toml
+++ b/execution/Cargo.toml
@@ -30,6 +30,7 @@ eyre="0.6.2"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
+dotenv = "0.15.0"
 thiserror = "2.0.9"
 tokio = { version = "1.37.0", features = ["full"] }
 tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.6", package = "tlsn-core" }
