--- a/validation/crates/migration/Cargo.toml
+++ b/validation/crates/migration/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/lib.rs"
 
 [dependencies]
 base64 = "0.22.1"
-dotenvy = "0.15.7"
+dotenv = "0.15.0"
 sindri = "0.1.0"
 tokio = { version = "1.37.0", features = ["full"] }
 serde_json = "1.0.124"
