--- a/.github/workflows/validation-tests.yml
+++ b/.github/workflows/validation-tests.yml
@@ -19,8 +19,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        submodules: recursive
-        fetch-depth: 0
+        with:
+          submodules: recursive
+          fetch-depth: 0
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
