--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -29,3 +29,7 @@ http-body-util = "0.1"
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
+
+tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.6", package = "tlsn-core" }
+notary-client = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.6", package = "notary-client" }
+tlsn-prover = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.6", package = "tlsn-prover" }
