--- a/execution/contracts/foundry.toml
+++ b/execution/contracts/foundry.toml
@@ -5,7 +5,8 @@ cache_path  = 'forge-cache'
 gas_reports = ["*"]
 optimizer = true
 optimizer_runs = 20000
+via_ir = true
 test = 'test'
 solc = '0.8.26'
-fs_permissions = [{ access = 'read', path = './' }, { access = 'read-write', path = './deploy-out' }]
+fs_permissions = [{ access = 'read', path = './out' }, { access = 'read-write', path = './deploy-out' }]
 evm_version = 'cancun'
