--- a/execution/crates/verifier/Cargo.toml
+++ b/execution/crates/verifier/Cargo.toml
@@ -9,9 +9,10 @@ name = "verifier"
 path = "src/lib.rs"
 
 [dependencies]
-tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.6", package = "tlsn-core" }
+tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.8", package = "tlsn-core" }
 elliptic-curve = {version = "0.13.5", features = ["pkcs8"]}
 p256 = { version = "0.13", features = ["pem", "ecdsa"] }
 chrono = "0.4"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0"
+hex = "0.4"
